Fix alignment && positioning of TV message

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,19 +19,22 @@ body {
 }
 
 #status-message {
-  font-family: "Courier New", Courier, monospace;
+  font-family: "TickingTimebombBB";
+  font-size: 20pt;
   padding: 10px;
   margin: 40px;
+  width: 70px;
   position: absolute;
-  top: 120px;
-  right: 150px;
+  text-align: center;
+  top: 105px;
+  right: 130px;
   z-index: 1;
   -ms-transform: rotate(351deg); /* IE 9 */
   transform: rotate(351deg);
 }
 
 #tv-2-background {
-  background-color: rgb(0, 184, 28);
+  background-color: rgb(52, 13, 101);
   position: absolute;
   top: 120px;
   right: 140px;
